fix: Resolve compilation errors and make project buildable